--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/app_secondary_color_3"
     android:layout_height="@dimen/nav_header_dimn"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/additional_color_3">
 
     <ImageView
+        android:id="@+id/loog_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -17,6 +19,23 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="-100dp"
+        android:layout_marginBottom="28dp"
+        android:padding="10dp"
+
+        android:text="@string/app_name"
+        app:flow_verticalBias="1.0"
+        app:layout_constraintBaseline_toBottomOf="@id/loog_view"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loog_view" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
