--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -1,41 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_dimn"
-    android:background="@color/additional_color_3">
+    android:background="@color/additional_color_3"
+    android:gravity="bottom"
+    android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/loog_view"
+        android:id="@+id/logo_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:padding="10dp"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintBaseline_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@mipmap/ic_launcher" />
+
+    <TextView
+        android:id="@+id/appNameText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:fontFamily="@font/pristina"
+        android:text="@string/app_name"
+        android:textSize="15sp"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="-100dp"
-        android:layout_marginBottom="28dp"
-        android:padding="10dp"
-
-        android:text="@string/app_name"
-        app:flow_verticalBias="1.0"
-        app:layout_constraintBaseline_toBottomOf="@id/loog_view"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loog_view" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginStart="10dp"
+        android:fontFamily="@font/pristina"
+        android:text="@string/user_bceducation_com"
+        android:textSize="10sp"
+        android:paddingBottom="5dp"
+        android:textColor="@color/white"
+        android:textStyle="normal" />
+</LinearLayout>
