--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
+    android:id="@+id/main_drawer"
     tools:context=".MainActivity">
     <include layout="@layout/nav_bar"
         android:layout_width="match_parent"
@@ -17,7 +18,7 @@
         android:fitsSystemWindows="true"
         android:id="@+id/navigationView"
         app:headerLayout="@layout/header_layout"
-        app:menu="@menu/activity_main_drawer"
+        app:menu="@menu/conta_menu"
         />
 
 </androidx.drawerlayout.widget.DrawerLayout>
